--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,7 @@ jobs:
         # Local folder to be synced
         src: 'html/'
         # Remote server and path. i.e user@server.com:/var/www/server.com/
-        dest: 'medvets@vanness.uberspace.de:~/html'
+        dest: 'medvets@vanness.uberspace.de:/var/www/virtual/medvets/html/'
         
     
     - name: Display status from deploy
