--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,11 +18,11 @@ jobs:
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8
+        python-version: 3.8.10
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pelican markdown
+        python -m pip install --upgrade pelican==4.6.0 markdown
 
     - name: Checkout medvets-theme
       uses: actions/checkout@v2
