--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pelican==4.6.0 markdown
+        python -m pip install --upgrade pelican==4.6.0 jinja2==3.0.3 markdown==3.3.6
 
     - name: Checkout medvets-theme
       uses: actions/checkout@v2
